Fix scrollbars at edge of page on desktop browsers

--- a/app/src/main/resources/html/style.css
+++ b/app/src/main/resources/html/style.css
@@ -34,6 +34,12 @@ body {
      */
     touch-action: none;
 
+    margin: 0;
+
     width: 100vw;
     height: 100vh;
+}
+
+:root {
+    padding: 0;
 }
